--- a/diclofenac.html
+++ b/diclofenac.html
@@ -199,7 +199,7 @@ a.back span {
 <main>
 
   <div class="langbar" aria-label="Vælg sprog">
-    <label for="langSelect" id="langLabel">Vælg sprog:</label>
+    <label for="langSelect" id="langLabel">Dooro luqadda:</label>
     <select id="langSelect">
       <option value="so" selected>Somalisk</option>
       <option value="da">Dansk</option>
@@ -330,31 +330,31 @@ const T = {
         "Waxaa loo isticmaalaa xanuunka kala-goysyada, dhabarka iyo xanuunka qallinka ka dib."
       ]},
       dose: { title:"Qiyaasta", small:"(Dosering)", items:[
-        "2–3 jeer maalinkii 50–200 mg.",
-        "Qiyaasta saxda ah waxaa go'aamiya dhakhtarka."
+        "2–3 jeer maalintii, 50–200 mg.",
+        "Qiyaasta saxda ah waxaa go’aamiya dhakhtarka."
       ]},
       side: { title:"Waxyeellooyinka", small:"(Bivirkninger)", items:[
         "Calool xanuun, lalabo, madax-xanuun.",
-        "Boogo caloosha khatar ah, dhiig-bax iyo wadne-xanuun marka muddo dheer la qaato."
+        "Boogo caloosha khatar ah, dhiig-bax iyo wadne-xanuun, marka muddo dheer la qaato."
       ]},
       interact: { title:"Isdhexgalka daawooyinka", small:"(Interaktioner)", items:[
         "Ha isku darin NSAID iyo daawooyinka kale sida dhiig-khafiifinta.",
-        "Daawooyinka dhiig-karka iyo kelyaha, qaarkood waxay kordhiyaan saameynta kelyaha."
+        "Daawooyinka dhiig-karka iyo kelyaha qaarkood waxay kordhiyaan saameynta kelyaha."
       ]},
       warn: { title:"Digniino", small:"(Advarsler)", items:[
         "Haddii aad leedahay wadne-xanuun, boogo caloosha ama dhiig-bax hore, waxa aad u baahan tahay kormeer gaar ah.",
-        "Daawadan ha isticmaalin mudda dheer adiga oo aan la tashan dhakhtar."
+        "Daawadan ha isticmaalin muddo dheer, adiga oo aan la tashan dhakhtar."
       ]},
       ramadan: { title:"Ramadaan iyo soonka", small:"(Ramadan og faste)", items:[
         "Kaniiniga diclofenac wuxuu jebiyaa soonka.",
-        "Gel-ka maqaarka la mariyo badanaa looma tixgeliyo jebin soon, madaamo oo jirka gudaha uu galeeyn."
+        "Gel-ka maqaarka la mariyo badanaa looma tixgeliyo jebin soon, maadaama uusan jirka gudaha gelin."
       ]},
       food: { title:"Cunto iyo cabitaan", small:"(Mad og drikke)", items:[
         "Ku qaado cunno si loo ilaaliyo caloosha.",
-        "Ha cuniin adiga oo gajoonaya."
+        "Ha cuniin adiga oo gaajaysan."
       ]},
       store: { title:"Kaydinta daawada", small:"(Opbevaring)", items:[
-        "Ku hay daawada meel ka fog carruurta yar yar, kana hooseysa 25 °C. Ku hay baakadka asalka ah, si looga ilaaliyo iftiinka iyo huurka. Ha qaadan daawada marka ay dhaafto taariikhda \"EXP\" (daawada goorta ee dhacday), ama haddii midabka isbadalay. Wixii soo haray, weydii farmashiyaha si loogu tuuro meesha ku habboon."
+        "Ku hay daawada meel ka fog carruurta yar yar, kana hooseysa 25 °C. Ku hay baakadka asalka ah, si looga ilaaliyo iftiinka iyo huurka. Ha qaadan daawada marka ay dhaafto taariikhda dhicitaanka (expiry date), ama haddii midabka isbeddelay. Wixii soo haray, weydii farmashiyaha si loogu tuuro meesha ku habboon."
       ]}
     },
     footerHTML: "Haddii aad u baahan tahay faahfaahin dheeraad ah, la xiriir <span class=\"highlight\">farmashiyaha</span> ama dhakhtarkaaga.<br/>(Hvis du har brug for mere information, kontakt dit lokale apotek eller din egen læge.)",
@@ -392,14 +392,14 @@ const T = {
       ]},
       ramadan: { title:"Ramadan og faste", small:"", items:[
         "Diclofenac som tablet bryder fasten.",
-        "Diclofenac gel på huden regnes ofte ikke som at bryde fasten, da det ikke går ind i kroppen."
+        "Diclofenac gel på huden regnes ofte ikke som at bryde fasten, da det normalt ikke optages som mad eller drikke."
       ]},
       food: { title:"Mad og drikke", small:"", items:[
         "Tag gerne medicinen sammen med mad for at beskytte maven.",
         "Undgå at tage den på tom mave."
       ]},
       store: { title:"Opbevaring", small:"", items:[
-        "Opbevar utilgængeligt for børn og under 25 °C. Opbevar i original emballage for at beskytte mod lys og fugt. Brug ikke efter udløbsdatoen (EXP) eller hvis farven har ændret sig. Spørg apoteket om korrekt bortskaffelse af rester."
+        "Opbevar utilgængeligt for børn og under 25 °C. Opbevar i original emballage for at beskytte mod lys og fugt. Brug ikke efter udløbsdatoen, eller hvis farven har ændret sig. Spørg apoteket om korrekt bortskaffelse af rester."
       ]}
     },
     footerHTML: "Hvis du har brug for mere information, kontakt <span class=\"highlight\">apoteket</span> eller din læge.",
@@ -437,14 +437,14 @@ const T = {
       ]},
       ramadan: { title:"Ramadan and fasting", small:"", items:[
         "Diclofenac tablets break the fast.",
-        "Diclofenac gel applied to the skin is often not considered to break the fast, as it does not go inside the body."
+        "Diclofenac gel applied to the skin is often not considered to break the fast, as it is not taken orally."
       ]},
       food: { title:"Food and drink", small:"", items:[
         "Take with food to help protect your stomach.",
         "Avoid taking it on an empty stomach."
       ]},
       store: { title:"Storage", small:"", items:[
-        "Keep out of reach of children and store below 25 °C. Keep in the original packaging to protect from light and moisture. Do not use after the expiry date (EXP) or if the colour has changed. Ask the pharmacy how to dispose of leftovers properly."
+        "Keep out of reach of children and store below 25 °C. Keep in the original packaging to protect from light and moisture. Do not use after the expiry date, or if the colour has changed. Ask the pharmacy how to dispose of leftovers properly."
       ]}
     },
     footerHTML: "If you need more information, contact your <span class=\"highlight\">pharmacy</span> or doctor.",
@@ -482,14 +482,14 @@ const T = {
       ]},
       ramadan: { title:"رمضان والصيام", small:"", items:[
         "أقراص ديكلوفيناك تُفطر.",
-        "جل ديكلوفيناك على الجلد غالباً لا يُعتبر مُفطراً، لأنه لا يدخل إلى داخل الجسم."
+        "جل ديكلوفيناك على الجلد غالباً لا يُعتبر مُفطراً، لأنه لا يُؤخذ عن طريق الفم."
       ]},
       food: { title:"الطعام والشراب", small:"", items:[
         "يفضل تناوله مع الطعام لحماية المعدة.",
         "تجنب تناوله على معدة فارغة."
       ]},
       store: { title:"الحفظ", small:"", items:[
-        "يُحفظ بعيداً عن متناول الأطفال وتحت 25°م. احفظه في العبوة الأصلية للحماية من الضوء والرطوبة. لا تستخدمه بعد تاريخ الانتهاء (EXP) أو إذا تغيّر اللون. اسأل الصيدلية عن طريقة التخلص من البقايا."
+        "يُحفظ بعيداً عن متناول الأطفال وتحت 25°م. احفظه في العبوة الأصلية للحماية من الضوء والرطوبة. لا تستخدمه بعد تاريخ الانتهاء، أو إذا تغيّر اللون. اسأل الصيدلية عن طريقة التخلص من البقايا."
       ]}
     },
     footerHTML: "إذا كنت بحاجة إلى مزيد من المعلومات، تواصل مع <span class=\"highlight\">الصيدلية</span> أو طبيبك.",
@@ -527,14 +527,14 @@ const T = {
       ]},
       ramadan: { title:"Ramazan ve oruç", small:"", items:[
         "Diklofenak tablet orucu bozar.",
-        "Cilde sürülen diklofenak jel çoğu zaman orucu bozmaz, çünkü vücudun içine girmez."
+        "Cilde sürülen diklofenak jel çoğu zaman orucu bozmaz, çünkü ağızdan alınmaz."
       ]},
       food: { title:"Yiyecek ve içecek", small:"", items:[
         "Mideyi korumak için yemekle birlikte alın.",
         "Aç karnına almaktan kaçının."
       ]},
       store: { title:"Saklama", small:"", items:[
-        "Çocukların erişemeyeceği yerde ve 25 °C’nin altında saklayın. Işık ve nemden korumak için orijinal ambalajında tutun. Son kullanma tarihinden (EXP) sonra kullanmayın veya renk değişikliği varsa kullanmayın. Artan ilaçların imhası için eczaneye danışın."
+        "Çocukların erişemeyeceği yerde ve 25 °C’nin altında saklayın. Işık ve nemden korumak için orijinal ambalajında tutun. Son kullanma tarihinden sonra kullanmayın veya renk değişikliği varsa kullanmayın. Artan ilaçların imhası için eczaneye danışın."
       ]}
     },
     footerHTML: "Daha fazla bilgi için <span class=\"highlight\">eczane</span> veya doktorunuzla iletişime geçin.",
@@ -572,14 +572,14 @@ const T = {
       ]},
       ramadan: { title:"رمضان اور روزہ", small:"", items:[
         "ڈائکلوفیناک کی گولی روزہ توڑ دیتی ہے۔",
-        "جلد پر لگانے والا ڈائکلوفیناک جیل اکثر روزہ توڑنے میں شمار نہیں ہوتا، کیونکہ یہ جسم کے اندر نہیں جاتا۔"
+        "جلد پر لگانے والا ڈائکلوفیناک جیل اکثر روزہ توڑنے میں شمار نہیں ہوتا، کیونکہ یہ منہ کے ذریعے نہیں لیا جاتا۔"
       ]},
       food: { title:"کھانا پینا", small:"", items:[
         "معدے کی حفاظت کے لیے کھانے کے ساتھ لیں۔",
         "خالی پیٹ لینے سے پرہیز کریں۔"
       ]},
       store: { title:"محفوظ رکھنا", small:"", items:[
-        "بچوں کی پہنچ سے دور اور 25 °C سے کم درجۂ حرارت پر رکھیں۔ روشنی اور نمی سے بچانے کے لیے اصل پیک میں رکھیں۔ میعاد ختم ہونے (EXP) کے بعد استعمال نہ کریں یا اگر رنگ بدل گیا ہو۔ باقی ادویات تلف کرنے کے لیے فارمیسی سے پوچھیں۔"
+        "بچوں کی پہنچ سے دور اور 25 °C سے کم درجۂ حرارت پر رکھیں۔ روشنی اور نمی سے بچانے کے لیے اصل پیک میں رکھیں۔ میعاد ختم ہونے کی تاریخ کے بعد استعمال نہ کریں یا اگر رنگ بدل گیا ہو۔ باقی ادویات تلف کرنے کے لیے فارمیسی سے پوچھیں۔"
       ]}
     },
     footerHTML: "مزید معلومات کے لیے <span class=\"highlight\">فارمیسی</span> یا اپنے ڈاکٹر سے رابطہ کریں۔",
@@ -617,14 +617,14 @@ const T = {
       ]},
       ramadan: { title:"رمضان و روزه", small:"", items:[
         "قرص دیکلوفناک روزه را باطل می‌کند.",
-        "ژل دیکلوفناک روی پوست معمولاً باطل‌کننده روزه محسوب نمی‌شود، چون وارد داخل بدن نمی‌شود."
+        "ژل دیکلوفناک روی پوست معمولاً باطل‌کننده روزه محسوب نمی‌شود، چون خوراکی نیست."
       ]},
       food: { title:"غذا و نوشیدنی", small:"", items:[
         "برای محافظت از معده همراه غذا مصرف کنید.",
         "از مصرف با معده خالی خودداری کنید."
       ]},
       store: { title:"نگهداری", small:"", items:[
-        "دور از دسترس کودکان و در دمای زیر 25 °C نگهداری شود. برای محافظت از نور و رطوبت در بسته‌بندی اصلی نگه دارید. پس از تاریخ انقضا (EXP) یا در صورت تغییر رنگ مصرف نکنید. برای دورریز مناسب باقی‌مانده‌ها از داروخانه راهنمایی بگیرید."
+        "دور از دسترس کودکان و در دمای زیر 25 °C نگهداری شود. برای محافظت از نور و رطوبت در بسته‌بندی اصلی نگه دارید. پس از تاریخ انقضا یا در صورت تغییر رنگ مصرف نکنید. برای دورریز مناسب باقی‌مانده‌ها از داروخانه راهنمایی بگیرید."
       ]}
     },
     footerHTML: "برای اطلاعات بیشتر با <span class=\"highlight\">داروخانه</span> یا پزشک خود تماس بگیرید.",
@@ -662,14 +662,14 @@ const T = {
       ]},
       ramadan: { title:"رمضان و روزه", small:"", items:[
         "قرص دیکلوفناک روزه را باطل می‌کند.",
-        "ژل دیکلوفناک روی پوست معمولاً باطل‌کننده حساب نمی‌شود، چون داخل بدن نمی‌رود."
+        "ژل دیکلوفناک روی پوست معمولاً باطل‌کننده حساب نمی‌شود، چون خوراکی نیست."
       ]},
       food: { title:"غذا و نوشیدنی", small:"", items:[
         "برای حفاظت معده با غذا بگیرید.",
         "از گرفتن با معده خالی خودداری کنید."
       ]},
       store: { title:"نگهداری", small:"", items:[
-        "دور از دسترس اطفال و در درجهٔ حرارت زیر 25 °C نگه‌داری کنید. در بسته‌بندی اصلی برای محافظت از نور و رطوبت نگه‌دارید. بعد از تاریخ انقضا (EXP) یا در صورت تغییر رنگ استفاده نکنید. برای دور انداختن باقی‌مانده‌ها از دواخانه راهنمایی بگیرید."
+        "دور از دسترس اطفال و در درجهٔ حرارت زیر 25 °C نگه‌داری کنید. در بسته‌بندی اصلی برای محافظت از نور و رطوبت نگه‌دارید. بعد از تاریخ انقضا یا در صورت تغییر رنگ استفاده نکنید. برای دور انداختن باقی‌مانده‌ها از دواخانه راهنمایی بگیرید."
       ]}
     },
     footerHTML: "برای معلومات بیشتر با <span class=\"highlight\">دواخانه</span> یا داکتر خود تماس بگیرید.",
@@ -707,14 +707,14 @@ const T = {
       ]},
       ramadan: { title:"رمضان او روژه", small:"", items:[
         "د ډيکلوفېناک ګولۍ روژه ماتوي.",
-        "د پوستکي لپاره ډيکلوفېناک جېل اکثره روژه نه ماتوي، ځکه د بدن دننه نه ننوځي."
+        "د پوستکي لپاره ډيکلوفېناک جېل اکثره روژه نه ماتوي، ځکه خوراکي نه دی."
       ]},
       food: { title:"خواړه او څښاک", small:"", items:[
         "د معدې د ساتنې لپاره له خوړو سره واخلئ.",
         "په تشه معده یې مه اخلئ."
       ]},
       store: { title:"ساتنه", small:"", items:[
-        "له ماشومانو لرې او تر 25 °C لاندې وساتئ. د رڼا او رطوبت څخه د ساتنې لپاره په اصلي بکس/بسته کې وساتئ. د ختمېدو نېټې (EXP) وروسته یا د رنګ بدلون په صورت کې مه کاروئ. د پاتې درملو د مناسبې ضایع کولو لپاره له درملتون څخه پوښتنه وکړئ."
+        "له ماشومانو لرې او تر 25 °C لاندې وساتئ. د رڼا او رطوبت څخه د ساتنې لپاره په اصلي بکس/بسته کې وساتئ. د ختمېدو نېټې وروسته یا د رنګ بدلون په صورت کې مه کاروئ. د پاتې درملو د مناسبې ضایع کولو لپاره له درملتون څخه پوښتنه وکړئ."
       ]}
     },
     footerHTML: "د نورو معلوماتو لپاره له <span class=\"highlight\">درملتون</span> یا خپل ډاکټر سره اړیکه ونیسئ.",
@@ -741,7 +741,7 @@ function render(lang){
   const d = T[lang] || T.so;
 
   setDirLang(lang);
-  document.title = d.title;
+  document.title = d.title.replace(/<[^>]*>/g, "");
 
   document.getElementById("hdrTitle").innerHTML = d.title;
   document.getElementById("hdrSubtitle").textContent = d.subtitle;
@@ -752,10 +752,8 @@ function render(lang){
   document.getElementById("drugName").innerHTML = d.drugName;
   document.getElementById("drugForm").textContent = d.drugForm;
 
-  // lang label
   document.getElementById("langLabel").textContent = d.langLabel;
 
-  // section headers
   document.getElementById("useTitle").textContent = d.sections.use.title;
   document.getElementById("useSmall").textContent = d.sections.use.small || "";
 
@@ -780,7 +778,6 @@ function render(lang){
   document.getElementById("storeTitle").textContent = d.sections.store.title;
   document.getElementById("storeSmall").textContent = d.sections.store.small || "";
 
-  // lists
   fillList("useList", d.sections.use.items);
   fillList("doseList", d.sections.dose.items);
   fillList("sideList", d.sections.side.items);
@@ -793,13 +790,11 @@ function render(lang){
   document.getElementById("footerNote").innerHTML = d.footerHTML;
   document.getElementById("credit").innerHTML = d.creditHTML;
 
-  // keep language when going back
   const backA = document.querySelector("a.back");
   const base = backA.getAttribute("href").split("?")[0];
   backA.setAttribute("href", base + "?lang=" + encodeURIComponent(lang));
 }
 
-// Start language from ?lang=
 const params = new URLSearchParams(window.location.search);
 const startLang = params.get("lang") || "so";
 document.getElementById("langSelect").value = (T[startLang] ? startLang : "so");
